<resources>
    <string name="app_name">Constrain</string>
    <string name="et_ingresados">....</string>
    <string name="btn_9">9</string>
    <string name="btn_8">8</string>
    <string name="btn_7">7</string>
    <string name="btn_Division">/</string>
    <string name="btn_6">6</string>
    <string name="btn_5">5</string>
    <string name="btn_4">4</string>
    <string name="btn_multipli">X</string>
    <string name="btn_3">3</string>
    <string name="btn_2">2</string>
    <string name="btn_1">1</string>
    <string name="btn_0">0</string>
    <string name="btn_00">00</string>
    <string name="btn_igual">=</string>
    <string name="btn_punto">.</string>
    <string name="btn_Resta">-</string>
    <string name="btn_limpiar">C</string>
    <string name="btn_borrar"><![CDATA[<x]]></string>
    <string name="btn_sumar">+</string>
    <string name="tv_calculadora_daniel">Calculadora Daniel</string>
</resources>